# caviar

./: .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  INSTALL  README.md  test.txt
amin_temp_scripts/: o_potential.eps  plot_potential.sh  raw_data_generator.casl  to-do-list  water-salt-d2.2-post-process.casl
benchmark/: readme.md
benchmark/b1-PLT-vs-ICC/: plot_charge_icc.sh  plot_charge_plt.sh  readme.md
benchmark/b2-ewald/: readme.md
cmake/: README.md  print_final_configuration.cmake  print_final_message_before_build.cmake
cmake/configure/: configure_boost_python.cmake  configure_dealii.cmake  configure_eigen.cmake  configure_mpi.cmake  configure_muparser.cmake  configure_openmp.cmake
cmake/macros/: macro_check_build_type.cmake  macro_print_flag_value.cmake  macro_print_stars.cmake
cmake/modules/: FindBOOSTPYTHON.cmake  FindDEALII.cmake  FindEIGEN.cmake  FindMPI.cmake  FindMUPARSER.cmake  FindPYTHON.cmake
doc/: README.md
doc/developer/: To_Develop  developer-manual-txt-version.txt
doc/doxygen/: README.md  caviar-config.doxy  index.html
doc/user/: user-manual-txt-version.txt
examples/: README.md
examples/e1-two-atoms/: e1-two-atoms-electrostatic-lambda.casl  e1-two-atoms-electrostatic.casl  e1-two-atoms.casl  python-version.py
examples/e10-spherical-geometry/: README.md
examples/e11-ensembles/: e11-gas-NPT.casl  e11-gas-NVT.casl  e11-thermostat-NVT.casl  e11-water-NPT.casl  e11-water-NVT.casl  e11-water-PLT-NPT.casl  el_right.vtk
examples/e11-thermostat-NVT/: README.md  e11-thermostat-NVT.casl  e11-water-NVT.casl
examples/e12-atom-to-molecule/: README.md  e12-atom-to-molecule.casl  e12-atom-to-polymer-type1.casl  e12-atom-to-polymer-type2.casl
examples/e13-miscellaneous/: Box.unv  e13-ml-trainer-geometry.vtk  e13-ml-trainer-mesh.unv  e13-ml-trainer.casl  e13-time-function.casl  e13-umbrella-sampling-2.casl  e13-umbrella-sampling.casl
examples/e14-shaking-mesh/: e14-shaking-geometry-with-mesh.casl  e14-shaking-geometry.casl
examples/e2-periodic/: e2-periodic.casl
examples/e3-water/: README.md  e3-water-salt-resume.casl  e3-water-salt.casl  e3-water-single.casl  e3-water.casl  o_xyz_to_resume.xyz
examples/e4-polymer/: e4-polymer-angle-big.casl  e4-polymer-angle.casl  e4-polymer-big.casl  e4-polymer-sixgons-angle.casl  e4-polymer.casl
examples/e5-charged-particles/: e5-charged-particles-ewald1d.casl  e5-charged-particles.casl
examples/e6-finite-pore/: README.md  e6-finite-pore-export-field.casl  e6-finite-pore-with-oscillating-potential.casl  e6-finite-pore.casl  plot_field_vectors.sh
examples/e7-hopper/: Box.vtk  Hopper.vtk  README.md  e7-hopper.casl  hopper-box.hdf
examples/e8-geometry-slab/: e8-geometry-slab.casl  el_left.vtk  el_mid.vtk  wall.casl
examples/e9-water-salt-post-process/: README.md  e9-water-salt-post-process.casl  e9-water-salt.casl  water-salt-post-process.casl  water-salt.casl
include/: README.md
include/caviar/: CAVIAR.h
scripts/: README.md
scripts/developer/: bash_check_number_of_brackets.sh  find_string.sh  lines_of_code.sh  replace_string.sh  valgrind_debug.sh
scripts/user/: extract_last_xyz_frame_manually.sh  extract_last_xyz_frame_recursively.sh  gnuplot_commands.sh
src/: CMakeLists.txt  README.md  main_CAVIAR.cpp
src/caviar/: CAVIAR.cpp
tests/: README.md
tests/t1-interpreter/: t1-basic.casl  t2-if.casl  t3-else.casl  t4-elseif.casl  t5-loop.casl  t6-loop-if.casl  t7-loop-break-continue.casl
tools/: README.md
tools/mesh_modifier/: CMakeLists.txt  LICENSE  main.cpp
tools/mesh_modifier/doc/: README.md  install.txt
tools/mesh_modifier/examples/e1/: README.md
tools/mesh_modifier/examples/e1/vtk-geometry/: Compound_1.vtk  Fuse_1.vtk
tools/mesh_modifier/include/: macros.h  mesh_modifier.h  point_condition.h  universal_dataset_number_2411.h  universal_dataset_number_2412.h  universal_dataset_number_2467.h  universal_dataset_number_unsupported.h  unv_container.h  vector.h
tools/mesh_modifier/script/copyright/: add_hashed_copyright_to_files.sh  add_slashed_copyright_to_files.sh  copyright_slashed.txt
tools/mesh_modifier/src/: make_label_to_index.cpp  mesh_modifier.cpp  point_condition.cpp  unv_container.cpp
tools/mesh_modifier/src/mesh_modifier/: add_face_to_group_with_condition.cpp  cat.cpp  convert_tetra_to_hexa.cpp  export.cpp  export_stl.cpp  export_vtk.cpp  import.cpp  import_vtk.cpp  merge_all.cpp  merge_close_vertices.cpp  remove_hexa_internals.cpp  remove_similar_points.cpp  scale_vertices.cpp  utility.cpp
(+586 files in other folders)
